# grpc-contracts

./: Cargo.toml  README.md  build.rs
.github/workflows/: build_tests.yaml
grpc-contracts/: Cargo.toml  build.rs
grpc-contracts-macros/: Cargo.toml
grpc-contracts-macros/src/: lib.rs
grpc-contracts/src/: lib.rs
src/: lib.rs
