[package]
name = "grpc-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
accounts-manager = []
accounts-manager-persistence = []
authentication_integration = []
candles = []
comments_flows = []
deposit_flows = []
deposit_log = []
documents_flows = []
email_bridge = []
favorite_instruments_flows = []
keyvalue = []
kyc_log = []
kyc = []
manager_access_flows = []
pci_dss_bank_cards = []
personal_data_flows = []
psp_redirect_integration = []
report_grpc = []
reset_password_codes = []
status_flows = []
trade_log = []
trader_credentials = []
trading_executor = []
verifications = []
withdrawals_flows = []
withdrawal_log = []
position_manager = []
position_manager_persistence = []

[dependencies]
prost = "*"
prost-types = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }

[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] }
